# hyprfocus

./: .gitignore  meson.build  meson_options.txt
src/: main.cpp
