option('flash', type: 'feature', value: 'auto', description: 'Enable flash')
option('shrink', type: 'feature', value: 'auto', description: 'Enable shrink')
option('dispatch', type: 'feature', value: 'auto', description: 'Enable dispatch command')
option('xwayland', type: 'feature', value: 'auto', description: 'Enable support for X11 applications')
